2003-07-13  Seiichi SATO  <ssato@sh.rim.or.jp>

	* kik_config.h.in: Added gid_t. it is required on some platforms, and
	  defined by AC_TYPE_UID_T.
	
	* kiklib/configure.in: Cleaned up platform dependent stuff.

2003-07-09  Araki Ken  <arakiken@users.sf.net>

	* Fixed 0x0 core dump bug.
	  (BTS:762681)

	* ml_vt100_parser.c: Enabled IGNORE_SPACE_FG_COLOR.
	  (redrawing optimized)

	* Added -%,--logseq,logging_vt_seq option.

2003-07-07  MINAMI Hirokazu  <minami@mistfall.net>

	* fixed a compilation error.
	(Thanks to Hironori SAKAMOTO san)

2003-07-08  Seiichi SATO <ssato@sh.rim.or.jp>

	* Previous fix for sizehint bug still had a problem in
	  x_window_set_normal_hints(). Fixed.
	* Now pixmap_engine does not require *_use_mask key in rc file.
	  (Thanks to Minami Hirokazu san)

2003-07-08  Seiichi SATO <ssato@sh.rim.or.jp>

	* x_imagelib_imlib.c: fixed a small bug in x_imagelib_load_file().

2003-07-08  Seiichi SATO <ssato@sh.rim.or.jp>

	* My fix for sizehints bug (2002-08-29) seems not to be enough. Fixed.

2003-07-06  Araki Ken  <arakiken@users.sf.net>

	* Cursor character was not correctly drawn in window unfocused. Fixed.

2003-07-06  Seiichi SATO <ssato@sh.rim.or.jp>

	* pixmap_engine.c: minor cleanup

2003-07-06  Araki Ken  <arakiken@users.sf.net>

	* ml_edit.c, ml_line.c: Optimized the way of redrawing.

2003-07-05  Seiichi SATO <ssato@sh.rim.or.jp>

	* fixed a small bug in pixmap_engine.c

2003-07-05  MINAMI Hirokazu  <minami@mistfall.net>

	* x_imagelib_gdk.c:x_imagelib_load_file() now retuens None as "mask"
	when there's no alpha plane in the specified image file.	

2003-07-05  Seiichi SATO <ssato@sh.rim.or.jp>

	* Updated pixmap_engine since x_imagelib_load_file() was changed.

2003-07-05  MINAMI Hirokazu  <minami@mistfall.net>

	* Changed API of the x_imagelib_load_file() function.

2003-07-03 Araki Ken <arakiken@users.sf.net>

	* Modified a little README,man/mlterm.1,doc/ja/README.ja

2003-07-01 Araki Ken <arakiken@users.sf.net>
